--- a/proyectowidi.css
+++ b/proyectowidi.css
@@ -45,3 +45,11 @@ nav ul {
 display: flex;
 gap: 10px;
 }
+nav ul li a {
+    color: #000000;
+    text-decoration: none;
+    font-size: 18px;
+}
+nav ul li a:hover{
+    text-decoration: underline;
+}
