--- a/perfilando.css
+++ b/perfilando.css
@@ -40,6 +40,24 @@ header {
 header .logo img{
     height: 50px;
 }
+header .social-links{
+    display: inline-block;
+}
+.social-links a{
+    margin: 0 15px;
+    text-decoration: none;
+}
+
+.social-icon{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    transition: transform 0.3s;
+}
+
+.social-icon:hover{
+    transform: scale(1.1);
+}
 nav ul {
     list-style: none;
 display: flex;
