--- a/perfilando.css
+++ b/perfilando.css
@@ -8,7 +8,7 @@ body {
     float: left;
     width: 300px;
     margin: 50px 0;
-    text-align: center;
+    text-align: right;
     padding: 10px;
     background-color: rgb(193, 78, 251);
     border: 1px solid #ddd;
