--- a/perfilando.css
+++ b/perfilando.css
@@ -63,3 +63,30 @@ nav ul {
 display: flex;
 gap: 10px;
 }
+
+.navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: purple;
+  }
+  
+  .search-container {
+    float: left;
+    width: 300px;
+    margin: 50px 0;
+    text-align: right;
+    padding: 10px;
+    background-color: rgb(193, 78, 251);
+    border: 1px solid #ddd;
+    border-radius: 15px;
+    box-shadow: 2px 2px 50px #ccc;
+  }
+  
+  .menu-items {
+    display: flex;
+  }
+  
+  .menu-items a {
+    margin-right: 10px; 
+  }
