--- a/perfilando.css
+++ b/perfilando.css
@@ -4,17 +4,51 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
-.contenedor-busqueda{
-    float: left;
-    width: 300px;
-    margin: 50px 0;
-    text-align: right;
-    padding: 10px;
-    background-color: rgb(193, 78, 251);
-    border: 1px solid #ddd;
-    border-radius: 15px;
-    box-shadow: 2px 2px 50px #ccc;
+
+header{
+    position: relative;
+    background-image: url(imgheader.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 350px;
+    background-color: white;
 }
+
+.encabezado{
+    justify-content: center;
+}
+
+.encabezado p{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #f0fff0;
+    }
+
+.encabezado h1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #f0fff0;
+     }
+
+.navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+
+  }
+
+
+
+
+
+
+
 #busqueda{
     width: 70%;
     height: 30%;
