--- a/perfilando.css
+++ b/perfilando.css
@@ -40,8 +40,51 @@ header{
     position: absolute;
     top: 10px;
     right: 20px;
+    }
 
-  }
+    .menu-items ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+          }
+        
+.menu-items a{
+            display: flex;
+            text-decoration: none;
+            color: aliceblue;
+            margin: 0 15px;
+            justify-content: space-between;
+        
+        }
+        
+.menu-items :hover{
+            text-decoration: underline;
+        
+        }
+        .aaa h2{
+         display: flex;
+         align-items: center;
+         color: darksalmon;
+        }
+        
+        #servicio{
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        
+        .secciones{
+            width: 200px;
+            margin: 10px;
+            text-align: center;
+}
+
+
+
+
+
+
   
   .search-container {
     float: left;
