--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
-/* selector etiqueta header*/
+.contenedor-busqueda{
+    width: 300px;
+    height: 25px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background-color: rgb(163, 74, 246);
+    color: blue;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+
+
 header{
     display: flex;
     justify-content: space-between;
@@ -23,9 +39,9 @@ nav ul li a{
 nav ul li a:hover{
     text-decoration: underline;
 }
-#inicio{
+.inicio{
     background: url(imagen);
-    color: bisque;
+    color: rgb(188, 41, 233);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -40,15 +56,15 @@ nav ul li a:hover{
 .inicio-contenido p{
     font-size: 1.5rem;
 }
-#nosotras{
+.nosotras{
     padding: 50px 30px;
 text-align: center;
 background-color: blue;
 }
-#nosotras h2{
+.nosotras h2{
     font-size: 2.5rem;
 }
-#nosotras p{
+.nosotras p{
     max-width: 800px;
     margin: 0 auto;
     font-size: 1.2rem;
