--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header{
+    position: relative;
+    background-image: url(imgheader.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 350px;
+    background-color: white;
+}
+
+.titulo{
+    justify-content: center;
+}
+
+
+
 .contenedor-busqueda{
     width: 300px;
     height: 25px;
