--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,30 @@ header{
     justify-content: center;
 }
 
+.titulo p{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #f0fff0;
+    }
+
+.titulo h1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #f0fff0;
+     }
+
+.navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    }
+
 
 
 .contenedor-busqueda{
