--- a/css/style.css
+++ b/css/style.css
@@ -42,32 +42,32 @@ header{
     right: 20px;
     }
 
+    .menu-items ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+          }
+        
+.menu-items a{
+            display: flex;
+            text-decoration: none;
+            color: aliceblue;
+            margin: 0 15px;
+            justify-content: space-between;
+        
+        }
+        
+.menu-items :hover{
+            text-decoration: underline;
+        
+        }
 
 
-.contenedor-busqueda{
-    width: 300px;
-    height: 25px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background-color: rgb(163, 74, 246);
-    color: blue;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 
 
 
-
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: blueviolet;
-    padding: 10px 20px;
-}
 /* selector descendente*/
 header .logo img{
     height: 50px;
