--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,24 @@ header{
         }
 
 
+.aaa h2{
+    display: flex;
+    align-items: center;
+    color: darksalmon;
+}
+    
+#servicio{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+    
+.secciones{
+    width: 200px;
+    margin: 10px;
+    text-align: center;
+}
+
 
 
 
