--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,26 @@
 .contenedor-busqueda{
-    width: 300px;
-    height: 25px;
+    width: 250px;
+    height: 20px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    background-color: rgb(163, 74, 246);
+    background-color: rgb(12, 1, 9);
     color: blue;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-
-
-
-
-
+.inicio-contenido{
+    background-image:url(../imagenes/fondo.jpg) ;
+    background-size: cover;
+    background-position: center;
+    height: 740px;
+    width: 1590px;
+}
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: blueviolet;
+    background-color: rgba(231, 131, 178, 0.666);
     padding: 10px 20px;
 }
 /* selector descendente*/
@@ -32,7 +33,7 @@ nav ul{
      gap: 20px;
 }
 nav ul li a{
-    color: blueviolet;
+    color: rgb(5, 0, 10);
     text-decoration: none;
     font-size: 18px;
 }
@@ -41,7 +42,7 @@ nav ul li a:hover{
 }
 .inicio{
     background: url(imagen);
-    color: rgb(188, 41, 233);
+    color: rgb(17, 3, 21);
     height: 100vh;
     display: flex;
     align-items: center;
